Init TDD for New API Routes (Polars) - will combine util functions
