# backend/documentation/openapi.json
@@ -122,7 +122,7 @@
         }
       }
     },
-    "/climate/station/{id}/report": {
+    "/climate/stations/{id}/report": {
       "get": {
         "tags": [
           "Climate"
@@ -985,7 +985,7 @@
         }
       }
     },
-    "/groundwater/level/station/{id}/report": {
+    "/groundwater/level/stations/{id}/report": {
       "get": {
         "tags": [
           "Groundwater"
@@ -1091,7 +1091,7 @@
         }
       }
     },
-    "/groundwater/quality/station/{id}/report": {
+    "/groundwater/quality/stations/{id}/report": {
       "get": {
         "tags": [
           "Groundwater"
@@ -1255,7 +1255,7 @@
         }
       }
     },
-    "/streamflow/station/{id}/report": {
+    "/streamflow/stations/{id}/report": {
       "get": {
         "tags": [
           "Streamflow"
@@ -1374,7 +1374,7 @@
                             "type": "object",
                             "properties": {
                               "year": {
-                                "type": "number"
+                                "type": "string"
                               },
                               "data": {
                                 "type": "array",
@@ -1490,6 +1490,123 @@
                       }
                     }
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/streamflow/stations/{id}/report/flow-duration": {
+      "get": {
+        "tags": [
+          "Streamflow"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Station ID"
+          },
+          {
+            "name": "start-year",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Start Year of Interest"
+          },
+          {
+            "name": "end-year",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "End Year of Interest"
+          },
+          {
+            "name": "month",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Month of Interest"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Payload of Flow Duration Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "totalRunoff": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "year": {
+                            "type": "string"
+                          },
+                          "value": {
+                            "type": "number"
+                          }
+                        },
+                        "additionalProperties": false
+                      }
+                    },
+                    "monthlyFlowStatistics": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "month": {
+                            "type": "string"
+                          },
+                          "max": {
+                            "type": "number"
+                          },
+                          "min": {
+                            "type": "number"
+                          },
+                          "median": {
+                            "type": "number"
+                          },
+                          "p25": {
+                            "type": "number"
+                          },
+                          "p75": {
+                            "type": "number"
+                          }
+                        },
+                        "additionalProperties": false
+                      }
+                    },
+                    "flowDuration": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "value": {
+                            "type": "number"
+                          },
+                          "exceedance": {
+                            "type": "number"
+                          }
+                        },
+                        "additionalProperties": false
+                      }
+                    }
+                  },
+                  "additionalProperties": false
                 }
               }
             }
@@ -1836,7 +1953,7 @@
         }
       }
     },
-    "/surface-water/station/{id}/report": {
+    "/surface-water/stations/{id}/report": {
       "get": {
         "tags": [
           "Surface Water"
@@ -2011,7 +2128,7 @@
         }
       }
     },
-    "/watershed/station/{id}/report": {
+    "/watershed/stations/{id}/report": {
       "get": {
         "tags": [
           "Watershed"
