# backend/routers/climate.py
@@ -9,7 +9,7 @@ def get_climate_stations():
 
     return response, 200
 
-@climate.route('/station/<int:id>/report', methods=['GET'])
+@climate.route('/stations/<int:id>/report', methods=['GET'])
 def get_climate_station_report_by_id(id):
 
     response = app.db.get_climate_station_report_by_id()
