# backend/routers/groundwater.py
@@ -16,14 +16,14 @@ def get_groundwater_quality_stations():
 
     return response, 200
 
-@groundwater.route('/level/station/<int:id>/report', methods=['GET'])
+@groundwater.route('/level/stations/<int:id>/report', methods=['GET'])
 def get_groundwater_level_station_report_by_id(id):
 
     response = app.db.get_groundwater_level_station_report_by_id()
 
     return response, 200
 
-@groundwater.route('/quality/station/<int:id>/report', methods=['GET'])
+@groundwater.route('/quality/stations/<int:id>/report', methods=['GET'])
 def get_groundwater_quality_station_report_by_id(id):
 
     response = app.db.get_groundwater_quality_station_report_by_id()
