# backend/routers/streamflow.py
@@ -9,9 +9,16 @@ def get_streamflow_stations():
 
     return response, 200
 
-@streamflow.route('/station/<int:id>/report', methods=['GET'])
+@streamflow.route('/stations/<int:id>/report', methods=['GET'])
 def get_streamflow_station_report_by_id(id):
 
     response = app.db.get_streamflow_station_report_by_id()
+
+    return response, 200
+
+@streamflow.route('/stations/<int:id>/report/flow-duration', methods=['GET'])
+def get_streamflow_station_report_low_duration_by_id(id):
+
+    response = app.db.get_streamflow_station_report_flow_duration_by_id()
 
     return response, 200
